修复一些bug，修改一些主题，发布版本1.2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,15 @@
 <resources>
-    <string name="app_name">bill</string>
+    <string name="app_name">Bill</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_tt">tt</string>
+
+    <string name="can_not_find_version_name">找不到版本号</string>
+
+
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
